mall-swarm/mall-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-admin-deployment
  namespace: default
  labels:
    app: mall-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-admin
  template:
    metadata:
      labels:
        app: mall-admin
    spec:
      containers:
        - name: mall-admin
          # 指定Docker Hub中的镜像地址
          image: macrodocker/mall-admin:1.0-SNAPSHOT
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/logs
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mydata/app/mall-admin/logs
            type: DirectoryOrCreate
