mall-swarm/mall-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-auth-deployment
  namespace: default
  labels:
    app: mall-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-auth
  template:
    metadata:
      labels:
        app: mall-auth
    spec:
      containers:
        - name: mall-auth
          # 指定Docker Hub中的镜像地址
          image: macrodocker/mall-auth:1.0-SNAPSHOT
          ports:
            - containerPort: 8401
          volumeMounts:
            - mountPath: /var/logs
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mydata/app/mall-auth/logs
            type: DirectoryOrCreate
