mall-swarm/mall-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-gateway-deployment
  namespace: default
  labels:
    app: mall-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-gateway
  template:
    metadata:
      labels:
        app: mall-gateway
    spec:
      containers:
        - name: mall-gateway
          # 指定Docker Hub中的镜像地址
          image: macrodocker/mall-gateway:1.0-SNAPSHOT
          ports:
            - containerPort: 8201
          volumeMounts:
            - mountPath: /var/logs
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mydata/app/mall-gateway/logs
            type: DirectoryOrCreate
