mall-swarm/mall-monitor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-monitor-deployment
  namespace: default
  labels:
    app: mall-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-monitor
  template:
    metadata:
      labels:
        app: mall-monitor
    spec:
      containers:
        - name: mall-monitor
          # 指定Docker Hub中的镜像地址
          image: macrodocker/mall-monitor:1.0-SNAPSHOT
          ports:
            - containerPort: 8101
          volumeMounts:
            - mountPath: /var/logs
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mydata/app/mall-monitor/logs
            type: DirectoryOrCreate
