mall-swarm/mall-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-search-deployment
  namespace: default
  labels:
    app: mall-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mall-search
  template:
    metadata:
      labels:
        app: mall-search
    spec:
      containers:
        - name: mall-search
          # 指定Docker Hub中的镜像地址
          image: macrodocker/mall-search:1.0-SNAPSHOT
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /var/logs
              name: log-volume
      volumes:
        - name: log-volume
          hostPath:
            path: /mydata/app/mall-search/logs
            type: DirectoryOrCreate
