mall-swarm/mall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: mall-gateway-service
    servicePort: 30201
